# Burst-Attention

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  exp.sh  exp_res.csv  pyproject.toml  setup.py
benchmarks/: bench.sh  benchmark.py  ring_attn.py  utils.py
burst_attn/: __init__.py  a.sh  bench.sh  benchmark.py  benchmark.sh  benchmark_new.py  burst_attn.py  burst_attn_interface.py  burst_attn_simple.py  burst_utils.py  checker.py  comm.py  cuda_info.py  exp.py  experiment.ipynb  flash_attn.py  flash_forward.py  flash_mask.py  flash_triton.py  gpu-info.txt  gpu_memory_usage.csv  lao.py  log_helper.py  math.ipynb  plot.py  ringAttn.py  ring_attn.py  run.sh  test.sh  test_burst.py  test_ring_attn.py
burst_attn/experiment/: burst_1024.txt  burst_1024_backward.txt  burst_16384.txt  burst_16384_backward.txt  burst_2048.txt  burst_2048_backward.txt  burst_32768.txt  burst_32768_backward.txt  burst_4096.txt  burst_4096_backward.txt  burst_8192.txt  burst_8192_backward.txt  normal_1024.txt  normal_1024_backward.txt  normal_16384.txt  normal_16384_backward.txt  normal_2048.txt  normal_2048_backward.txt  normal_32768.txt  normal_32768_backward.txt  normal_4096.txt  normal_4096_backward.txt  normal_8192.txt  normal_8192_backward.txt  process_data.ipynb  ring_1024.txt  ring_1024_backward.txt  ring_16384.txt  ring_2048.txt  (+8 more)
example/: benchmark.py  comm_bench.py  exp.py  exp_inf.py  exp_plot.ipynb  flash_bench.py  inference.py  lamma_7b_inf_exp  log_name  ref_inf.sh  run.sh  sbatch.sh  slurm50b.sh  tools.py  train.py
test/: checker.py  test.sh  test_burst.py  test_cli.sh
(+11 files in other folders)
